// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step active snapshot 1`] = `
<li
  className="active"
>
  <span />
</li>
`;

exports[`Step disabled snapshot 1`] = `
<li
  className="disabled"
>
  <span />
</li>
`;
